@@ -76,7 +76,7 @@
           <em> Date:</em>
         </TD>
         <TD VALIGN="top">
-          [::xotcl::rcs date {$Date: 2004/11/20 18:54:34 $}]
+          [::xotcl::rcs date {$Date: 2004/11/27 21:10:33 $}]
         </TD>
       </TR>
     </TABLE>
